# Pascal2C

./: .gitignore  CMakeLists.txt  Pascal2C.7z  Pascal2C_Technical.md  README.md
antlr/: PascalS.g4  PascalS.interp  PascalS.tokens  PascalSBaseVisitor.cpp  PascalSBaseVisitor.h  PascalSLexer.cpp  PascalSLexer.h  PascalSLexer.interp  PascalSLexer.tokens  PascalSParser.cpp  PascalSParser.h  PascalSVisitor.cpp  PascalSVisitor.h
cmake/: ExternalAntlr4Cpp.cmake
include/: ErrorDealer.h  PascalToCTranslator.h  SymbolTable.h  TranslatorUtils.h  TypeConverter.h
src/: PascalToCTranslator.cpp  SymbolTable.cpp  TranslatorUtils.cpp  TypeConverter.cpp  main.cpp
